[package]
name = "rs_clean"
version = "0.3.0"
edition = "2021"

description = "Rust project that provides a command-line tool designed for cleaning up build artifacts within projects. "
authors = ["coderpwh"]
repository = "https://github.com/pwh-pwh/rs_clean"
license = "MIT"
readme = "./README.md"
rust-version = "1.80"
keywords = ["cli", "tools", "clean-tools"]
categories = ["command-line-utilities","development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rs_clean"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "3.0.0"
walkdir = "2.5.0"
which = "8.0.0"
tokio = { version = "1", features = ["full", "fs", "sync"] }
futures = "0.3"
indicatif = "0.18.0"
thiserror = "2.0.16"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
tempfile = "3.8"
dirs = "6.0.0"
dialoguer = "0.11"